--- a/webdev/index.html
+++ b/webdev/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Webdev</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -25,7 +25,7 @@
       <section class="your_life">
         <h2>your life is WebDev</h2>
         <div class="description">Whatever the approach to development may be, the final <br>program must satisfy some fundamental properties</div>
-        <button id="start1">Get started</button>
+        <a href="#" id="start1">Get started</a>
         <div class="icons">
           <img src="asserts/icons/mail_fff.svg" alt="mail">
           <img src="asserts/icons/facebook_fff.svg" alt="facebook">
@@ -34,17 +34,17 @@
         </div>
        </section>
     </div>
-  
+
     <section class="rappresent">
       <div class="rappresent_text">
         <h3>Rappresent your idea with <br>
           a smart Design</h3>
         <p>Tasks accompanying and related to programming include: testing, debugging, source code maintenance, <strong>implementation of build systems,</strong> and management of derived artifacts, such as the machine code of computer programs. </p>    
-        <button id="start2">Get started</button>
+        <a href="#" id="start2">Get started</a>
       </div>
       <img src="asserts/img/content-image-1.jpg" alt="image_1">
     </section>
-    
+
     <section class="our_community">
       <div class="community_description">
         <img src="asserts/icons/icon-girl.png" alt="girl">
@@ -71,14 +71,15 @@
       <div class="implement__content">
         <h3>Implement right Code</h3>
         <p>These might be considered part of the <strong>programming process,</strong> but often the term software development is used for this larger process with the term programming, implementation</p>
-        <button>Learn More</button>
+        <a href="#" id="learn">Learn more</a>
+        
       </div>
     </section>
 
     <section class="subscribe">
       <h3>sign up for our newsletter</h3>
       <form>
-        <input type="email" placeholder="E-mail">
+        <input type="email" placeholder="E-mail" required>
         <button><img src="asserts/icons/fa-check.svg" alt="check"></button>
       </form>
     </section>
@@ -88,14 +89,14 @@
         <h3>Download the App</h3>
         <p>Machine code was the language of early programs, written in the instruction set of the particular machine, often in binary notation.</p>
         <div class="buttons__stores">
-          <div class="btn__apple">
-            <button id="btn__apple__text">apple store</button>
-            <button id="btn__apple__img"><img src="asserts/icons/icon-apple.svg" alt="applestore"></button>
+          <div class="btn_apple">
+            <a id="apple" href="#">apple store</a>
+            <img src="asserts/icons/icon-apple.svg" alt="applestore">
           </div>
-          <div class="btn__android">
-            <button id="btn__android__text">play market</button>
-            <button id="btn__android__img"><img src="asserts/icons/icon-android.svg" alt="playmarket"></button>
-          </div>    
+          <div class="btn_android">
+            <a id="android" href="#">play market</a>
+            <img src="asserts/icons/icon-android.svg" alt="playmarket">
+          </div>
         </div>
       </div>
     </section>
