fix: add changes according to new layout

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -53,10 +53,12 @@
       </div>
       <!-- слайдер -->
       <div class="slider_counter">
+        <!-- <img src="asserts/icons/arrow-left.svg" alt="arrow_left"> -->
         <div id="prev"></div>      
         <span id="current">&nbsp;1</span>
         <span>/</span>
         <span id="total">5&nbsp;</span>
+        <!-- <img src="asserts/icons/arrow-right.svg" alt="arrow_right"> -->
         <div id="next"></div>  
       </div>
       <div class="slider_images">
