fix: add styles to form

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -82,7 +82,7 @@
       <h3>sign up for our newsletter</h3>
       <form>
         <input type="email" placeholder="E-mail" required>
-        <button><img src="asserts/icons/fa-check.svg" alt="check"></button>
+        <button><img id="bird" src="asserts/icons/fa-check.svg" alt="check"></button>
       </form>
     </section>
 
