--- a/calculator/index.html
+++ b/calculator/index.html
@@ -23,10 +23,24 @@
                 <button type="button" class="clear-btn btn btn-hover-red" id="c">c</button>
               </td>
               <td>
-                <button type="button" class="operator btn btn-hover-orange">/</button>
+                <button type="button" class="btn btn-hover-orange" id="toggle">+/-</button>
               </td>
               <td>
-                <button type="button" class=" operator btn btn-hover-orange">*</button>
+                <button type="button" class="operator btn btn-hover-orange">/</button>
+              </td>
+            </tr>
+            <tr class="calc-buttons-row">
+              <td>
+                <button type="button" class="btn btn-hover-orange"></button>
+              </td>
+              <td>
+                <button type="button" class="operator btn btn-hover-orange">x<sup>y</sup></button>
+              </td>
+              <td>
+                <button type="button" class="btn btn-hover-orange" id="root">&radic;</button>
+              </td>
+              <td>
+                <button type="button" class="operator btn btn-hover-orange">*</button>
               </td>
             </tr>
             <tr class="calc-buttons-row">
