feat: add new functions

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -31,7 +31,7 @@
             </tr>
             <tr class="calc-buttons-row">
               <td>
-                <button type="button" class="btn btn-hover-orange"></button>
+                <button type="button" class="btn btn-hover-orange" id="del">&larr;</button>
               </td>
               <td>
                 <button type="button" class="operator btn btn-hover-orange">x<sup>y</sup></button>
@@ -95,6 +95,11 @@
             </tr>
           </table>
         </div>
+      </div>
+      <div class="notes">
+        <div class="notes_head">Примечание:</div>
+        
+        <div class="notes_text">Задать отрицательное число можно нажав кнопку +/-.</div>
       </div>
   </main>
   <script src="script.js">
