--- a/calculator/index.html
+++ b/calculator/index.html
@@ -99,7 +99,7 @@
       <div class="notes">
         <div class="notes_head">Примечание:</div>
         
-        <div class="notes_text">Задать отрицательное число можно нажав кнопку +/-.</div>
+        <div class="notes_text">Задать отрицательное число можно нажав кнопку "+/-" или на знак "-".</div>
       </div>
   </main>
   <script src="script.js">
