--- a/shelter/pages/main/main.html
+++ b/shelter/pages/main/main.html
@@ -9,36 +9,46 @@
 	<title>Shelter</title>
 </head>
 <body>
-	<header class="header">
-		<div class="wrapper">
-			<div class="logo">
-				<div class="logo__title">Cozy House</div>
-				<div class="logo__subtitle">Shelter for pets in Boston</div>
-			</div>
-
-			<nav class="menu">
-				<ul class="list">
-					<li class="list__item list__link_active"><a class="list__link" href="#">About the shelter</a></li>
-					<li class="list__item"><a class="list__link list__link_disabled" href="#">Our pets</a></li>
-					<li class="list__item"><a class="list__link list__link_disabled" href="#">Help the shelter</a></li>
-					<li class="list__item"><a class="list__link list__link_disabled" href="#">Contacts</a></li>
-				</ul>
-			</nav>
-
-		</div>
-	</header>
-
-	<main>
-		<div class="wrapper">
-			<div class="hero">
-				<div class="hero-content">
-					<h2 class="hero-content__title">Not only people need a house</h2>
-				  <p class="hero-content__subtitle">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
-				  <button type="button" class="hero-content__button">Make a friend</button>
+	
+	
+		<header class="header">
+			<div class="wrapper">
+				<div class="logo">
+					<div class="logo__title">Cozy House</div>
+					<div class="logo__subtitle">Shelter for pets in Boston</div>
 				</div>
-				<img src="../../assets/images/start-screen-puppy.png" alt="">
+	
+				<nav class="menu">
+					<ul class="list">
+						<li class="list__item list__link_active"><a class="list__link" href="#">About the shelter</a></li>
+						<li class="list__item"><a class="list__link list__link_disabled" href="#">Our pets</a></li>
+						<li class="list__item"><a class="list__link list__link_disabled" href="#">Help the shelter</a></li>
+						<li class="list__item"><a class="list__link list__link_disabled" href="#">Contacts</a></li>
+					</ul>
+				</nav>
+	
 			</div>
-		</div>
-	</main>
+		</header>
+	
+		<main class="main">
+
+			<div class="hero">
+				<div class="wrapper">
+					<div class="hero-content">
+						<div class="content-section">
+							<h2 class="content-section__title">Not only people need a house</h2>
+							<p class="content-section__subtitle">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
+							<button type="button" class="content-section__button">Make a friend</button>
+						</div>
+						<img src="../../assets/images/start-screen-puppy.png" alt="hero-puppy" class="hero-image" >
+					</div>
+				</div>
+
+			</div>
+			
+		</main>
+
+	
+	
 </body>
 </html>
