feat: add content to main page

--- a/shelter/pages/main/main.html
+++ b/shelter/pages/main/main.html
@@ -9,30 +9,33 @@
 	<title>Shelter</title>
 </head>
 <body>
-	
-	
 		<header class="header">
 			<div class="wrapper">
 				<div class="logo">
-					<div class="logo__title">Cozy House</div>
+					<h1 class="logo__title">Cozy House</h1>
 					<div class="logo__subtitle">Shelter for pets in Boston</div>
 				</div>
-	
 				<nav class="menu">
 					<ul class="list">
-						<li class="list__item list__link_active"><a class="list__link" href="#">About the shelter</a></li>
-						<li class="list__item"><a class="list__link list__link_disabled" href="#">Our pets</a></li>
-						<li class="list__item"><a class="list__link list__link_disabled" href="#">Help the shelter</a></li>
-						<li class="list__item"><a class="list__link list__link_disabled" href="#">Contacts</a></li>
+						<li class="list__item">
+							<a class="list__link list__link_active" href="#">About the shelter</a>
+						</li>
+						<li class="list__item">
+							<a class="list__link list__link_disabled" href="#">Our pets</a>
+						</li>
+						<li class="list__item">
+							<a class="list__link list__link_disabled" href="#">Help the shelter</a>
+						</li>
+						<li class="list__item">
+							<a class="list__link list__link_disabled" href="#">Contacts</a>
+						</li>
 					</ul>
-				</nav>
-	
+				</nav>	
 			</div>
 		</header>
 	
 		<main class="main">
-
-			<div class="hero">
+			<section class="hero">
 				<div class="wrapper">
 					<div class="hero-content">
 						<div class="content-section">
@@ -43,12 +46,40 @@
 						<img src="../../assets/images/start-screen-puppy.png" alt="hero-puppy" class="hero-image" >
 					</div>
 				</div>
+			</section>
+			<section class="about">
+				<div class="wrapper">
+					<div class="about-content">
+						<div class="about-content-wrapper">
+							<img src="../../assets/images/about-pets.png" alt="about-pets" class="about-image">
+							<div class="about-text">
+								<h3 class="about-text__title">About the shelter “Cozy House”</h3>
+								<p class="about-text__description">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
+								<p class="about-text__description">We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p>
+							</div>
+						</div>					
+					</div>
+				</div>
+			</section>
+			<section class="our-friends">
+				<div class="wrapper">
+					<div class="our-friends-content">
+						<h3 class="our-friends-title">Our friends who <br>
+							are looking for a house</h3>
+						<div class="our-friends-slider">
+							<div class="btn btn-prev"><img src="../../assets/icons/arrow.svg" alt="arrow-prev"></div>
+							<div class="pets"></div>
+							<div class="btn btn-next"><img src="../../assets/icons/arrow-next.svg" alt="arrow-next"></div>
+						</div>
+						<a href="#" class="button-rest">Get to know the rest</a>
+					</div>
+				</div>
+			</section>
 
-			</div>
+
+
+
 			
-		</main>
-
-	
-	
+		</main>	
 </body>
 </html>
