fix: add styles to buttons

--- a/shelter/pages/main/main.html
+++ b/shelter/pages/main/main.html
@@ -67,7 +67,12 @@
 					<div class="our-friends-content">
 						<h3 class="our-friends-title">Our friends who <br>are looking for a house</h3>
 						<div class="our-friends-slider">
-							<div class="btn btn-prev"><img src="../../assets/icons/arrow.svg" alt="arrow-prev"></div>
+
+							<button class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+								<path fill="#444" d="M15 7v2H4v2L1 8l3-3v2z">
+							</svg></button>
+
+
 							<div class="our-friends-pets">
 								<div class="pet">
 									<!-- <div class="pet__box"></div> -->
@@ -89,7 +94,11 @@
 								</div>
 
 							</div>
-							<div class="btn btn-next"><img src="../../assets/icons/arrow-next.svg" alt="arrow-next"></div>
+
+							<button class="btn"><svg width="14" height="6" viewBox="0 0 14 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M0 2V4H11V6L14 3L11 0V2H0Z" fill="#292929"/>
+								</svg></button>
+
 						</div>
 						<a href="#" class="button-rest">Get to know the rest</a>
 					</div>
