fix: add some styles

--- a/shelter/pages/pets/pets.html
+++ b/shelter/pages/pets/pets.html
@@ -99,7 +99,7 @@
             <img src="../../assets/icons/icon-email-40x32.svg" alt="mail" width="40px" height="32px">
             <div class="contacts__mail-text">email@shelter.com</div>
           </a>
-          <a href="tel:+13 674 567 75 54" class="contacts__phone">
+          <a href="tel:+136745677554" class="contacts__phone">
             <img src="../../assets/icons/icon-phone -40x32.svg" alt="phone" width="40px" height="32px">
             <div class="contacts__phone-number">+13 674 567 75 54</div>
           </a>
@@ -115,7 +115,7 @@
             <div class="location__address-text">18 South Park, London </div>
           </a>
         </div>
-        <img src="../../assets/images/footer/footer-puppy - 300x310.png" alt="footer-puppy" class="footer-image">
+        <img src="../../assets/images/footer/footer-puppy-300x310.png" alt="footer-puppy" class="footer-image">
       </div>
     <!-- </div> -->
   </footer> 
