--- a/shelter/pages/pets/pets.html
+++ b/shelter/pages/pets/pets.html
@@ -15,6 +15,12 @@
         <h1 class="logo__title">Cozy House</h1>
         <div class="logo__subtitle">Shelter for pets in Boston</div>
       </div>
+      <div class="burger-menu"><svg width="30" height="22" viewBox="0 0 30 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <line y1="21" x2="30" y2="21" stroke="#F1CDB3" stroke-width="2"/>
+        <line y1="11" x2="30" y2="11" stroke="#F1CDB3" stroke-width="2"/>
+        <line y1="1" x2="30" y2="1" stroke="#F1CDB3" stroke-width="2"/>
+        </svg>
+      </div>
       <nav class="menu">
         <ul class="list">
           <li class="list__item">
@@ -91,33 +97,33 @@
     </div>
   </main>
   <footer class="footer">
-    <!-- < class="footer-wrapper"> -->
-      <div class="footer-wrapper">
+    <div class="footer-wrapper">
+      <div class="footer-content">
         <div class="contacts">
           <h3 class="contacts__title">For questions and suggestions</h3>
           <a href="mailto:email@shelter.com" class="contacts__mail">
-            <img src="../../assets/icons/icon-email-40x32.svg" alt="mail" width="40px" height="32px">
+            <img src="../../assets/icons/icon-email-40x32.svg" alt="mail" width="40" height="32">
             <div class="contacts__mail-text">email@shelter.com</div>
           </a>
           <a href="tel:+136745677554" class="contacts__phone">
-            <img src="../../assets/icons/icon-phone -40x32.svg" alt="phone" width="40px" height="32px">
+            <img src="../../assets/icons/icon-phone-40x32.svg" alt="phone" width="40" height="32">
             <div class="contacts__phone-number">+13 674 567 75 54</div>
           </a>
         </div>
         <div class="location">
           <h3 class="location__title">We are waiting for your visit</h3>
           <a href="https://www.google.com/maps/place/%D0%91%D0%BE%D1%81%D1%82%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@52.9784292,-0.056431,13z/data=!3m1!4b1!4m5!3m4!1s0x47d7c2c53856f733:0x8406d541f1a0910c!8m2!3d52.97894!4d-0.026577?hl=ru-RU" class="location__address1">
-            <img src="../../assets/icons/pin-22x32.svg" alt="pin" width="22px" height="32px">
+            <img src="../../assets/icons/pin-22x32.svg" alt="pin" width="22" height="32">
             <div class="location__address-text">1 Central Street, Boston (entrance from the store)</div>
           </a>
           <a href="https://www.google.com/maps/place/South+Park+Court,+18+S+Park+Rd,+London+SW19+8TD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.4202155,-0.2023441,17z/data=!3m1!4b1!4m5!3m4!1s0x487608baa7401b31:0x873a95ca58e122b2!8m2!3d51.4202122!4d-0.2001554?hl=ru-RU" class="location__address2">
-            <img src="../../assets/icons/pin-22x32.svg" alt="pin" width="22px" height="32px">
+            <img src="../../assets/icons/pin-22x32.svg" alt="pin" width="22" height="32">
             <div class="location__address-text">18 South Park, London </div>
           </a>
-        </div>
-        <img src="../../assets/images/footer/footer-puppy-300x310.png" alt="footer-puppy" class="footer-image">
+        </div>				
       </div>
-    <!-- </div> -->
-  </footer> 
+      <img src="../../assets/images/footer/footer-puppy-300x310.png" alt="footer-puppy" class="footer-image">
+    </div>
+  </footer>
 </body>
 </html>
