--- a/virtual-keyboard/index.html
+++ b/virtual-keyboard/index.html
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-      <title>Virtual Keyboard w/ HTML, CSS & JS</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta charset="utf-8">
-      <!-- <link rel="shortcut icon" href="/assets/favicon.ico"> -->
-      <!-- <link rel="stylesheet" href="/assets/dcode.css"> -->
-      <!-- <link rel="stylesheet" href="keyboard/Keyboard.css"> -->
-      <link rel="stylesheet" href="style.css">
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  </head>
-  <body>
-      <h1>Virtual Keyboard w/ HTML, CSS & JS</h1>
-      <h3>Features</h3>
-      <ul>
-          <li>Easy to integrate</li>
-          <li>Responsive</li>
-          <li>Vanilla JS (<strong>no libraries required!</strong>)</li>
-      </ul>
-      <textarea class="use-keyboard-input" style="position: absolute; top: 130px; right: 30px; width: 300px;"></textarea>
 
-      <!-- <script src="keyboard/Keyboard.js"></script> -->
-      <script src="script.js"></script>
-  </body>
+<!DOCTYPE html>
+<head>
+  <title>virtual-keyboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <!-- <link rel="shortcut icon" href="assets/favicon.ico"> -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <textarea class="use-keyboard-input" placeholder="Click here"></textarea>
+  <script src="script.js"></script>
+</body>
 </html>
