--- a/shelter/pages/main/main.html
+++ b/shelter/pages/main/main.html
@@ -9,7 +9,7 @@
 	<title>Shelter</title>
 </head>
 <body>
-		<header class="header">
+		<header class="header" id="header">
 			<div class="header-wrapper">
 				<div class="logo">
 					<h1 class="logo__title">Cozy House</h1>
@@ -25,10 +25,10 @@
 					
 					<ul class="list">
 						<li class="list__item">
-							<a class="list__link list__link_active" href="#">About the shelter</a>
+							<a class="list__link list__link_active" href="#header">About the shelter</a>
 						</li>
 						<li class="list__item">
-							<a class="list__link list__link_disabled" href="#">Our pets</a>
+							<a class="list__link list__link_disabled" href="../pets/pets.html">Our pets</a>
 						</li>
 						<li class="list__item">
 							<a class="list__link list__link_disabled" href="#">Help the shelter</a>
