--- a/shelter/pages/main/main.html
+++ b/shelter/pages/main/main.html
@@ -8,10 +8,10 @@
 	<link rel="stylesheet" href="main.css">
 	<title>Shelter</title>
 </head>
-<body>
-		<header class="header" id="header">
+<body id="start">
+		<header class="header">
 			<div class="header-wrapper">
-				<div class="logo">
+				<div class="logo logo-mobile">
 					<h1 class="logo__title">Cozy House</h1>
 					<div class="logo__subtitle">Shelter for pets in Boston</div>
 				</div>
@@ -21,20 +21,20 @@
 					<line y1="1" x2="30" y2="1" stroke="#F1CDB3" stroke-width="2"/>
 					</svg>
 				</div>
-				<nav class="menu">
+				<nav class="menu" id="menu">
 					
 					<ul class="list">
 						<li class="list__item">
-							<a class="list__link list__link_active" href="#header">About the shelter</a>
+							<a class="list__link list__link_active" href="#start" id="main-link">About the shelter</a>
 						</li>
 						<li class="list__item">
 							<a class="list__link list__link_disabled" href="../pets/pets.html">Our pets</a>
 						</li>
 						<li class="list__item">
-							<a class="list__link list__link_disabled" href="#">Help the shelter</a>
+							<a class="list__link list__link_disabled" href="javascript:void(0);">Help the shelter</a>
 						</li>
 						<li class="list__item">
-							<a class="list__link list__link_disabled" href="#">Contacts</a>
+							<a class="list__link list__link_disabled" href="javascript:void(0);">Contacts</a>
 						</li>
 					</ul>
 				</nav>	
@@ -49,7 +49,7 @@
 							<h2 class="content-section__title">Not only people need a house</h2>
 							<p class="content-section__subtitle">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
 							<!-- <button type="button" class="content-section__button">Make a friend</button> -->
-							<a href="#" class="content-section__button">Make a friend</a>
+							<a href="../pets/pets.html" class="content-section__button">Make a friend</a>
 						</div>
 						<img src="../../assets/images/start-screen/start-screen-puppy.png" alt="hero-puppy" class="hero-image" >
 					</div>
@@ -107,7 +107,7 @@
 								</svg></button>
 
 						</div>
-						<a href="#" class="button-rest">Get to know the rest</a>
+						<a href="../pets/pets.html" class="button-rest">Get to know the rest</a>
 					</div>
 				</div>
 			</section>
@@ -206,5 +206,6 @@
 				<img src="../../assets/images/footer/footer-puppy-300x310.png" alt="footer-puppy" class="footer-image">
 			</div>
 		</footer>
+		<script src="script.js"></script>
 </body>
 </html>
