--- a/shelter/pages/main/main.html
+++ b/shelter/pages/main/main.html
@@ -207,6 +207,32 @@
 				<img src="../../assets/images/footer/footer-puppy-300x310.png" alt="footer-puppy" class="footer-image">
 			</div>
 		</footer>
+		<div class="modal hide">
+			
+			<div class="modal-content">
+				<button class="btn-close"><svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path fill-rule="evenodd" clip-rule="evenodd" d="M7.42618 6.00003L11.7046 1.72158C12.0985 1.32775 12.0985 0.689213 11.7046 0.295433C11.3108 -0.0984027 10.6723 -0.0984027 10.2785 0.295433L5.99998 4.57394L1.72148 0.295377C1.32765 -0.098459 0.68917 -0.098459 0.295334 0.295377C-0.0984448 0.689213 -0.0984448 1.32775 0.295334 1.72153L4.57383 5.99997L0.295334 10.2785C-0.0984448 10.6723 -0.0984448 11.3108 0.295334 11.7046C0.68917 12.0985 1.32765 12.0985 1.72148 11.7046L5.99998 7.42612L10.2785 11.7046C10.6723 12.0985 11.3108 12.0985 11.7046 11.7046C12.0985 11.3108 12.0985 10.6723 11.7046 10.2785L7.42618 6.00003Z" fill="#292929"/>
+					</svg></button>
+				
+					
+			  <!-- <div class="modal-card"> -->
+					<!-- <div class="modal-image">
+						<img src="../../assets/images/pets/pets-jennifer.png" alt="Katrine">
+					</div>
+					<div class="modal-text">
+						<div class="modal-name">Jennifer</div>
+						<div class="modal-type">Dog - Labrador</div>
+						<div class="modal-description">Jennifer is a sweet 2 months old Labrador that is patiently waiting to find a new forever home. This girl really enjoys being able to go outside to run and play, but won't hesitate to play up a storm in the house if she has all of her favorite toys.</div>
+						<ul class="modal-list">
+							<li><span><strong>Age: </strong>2 months</span></li>
+							<li><span><strong>Inoculations: </strong>none</span></li>
+							<li><span><strong>Diseases: </strong>none</span></li>
+							<li><span><strong>Parasites: </strong>none</span></li>
+						</ul>		
+					</div> -->
+				<!-- </div>						 -->
+			</div>
+		</div>
 		<script src="script.js"></script>
 </body>
 </html>
