--- a/shelter/pages/main/main.html
+++ b/shelter/pages/main/main.html
@@ -31,10 +31,10 @@
 							<a class="list__link list__link_disabled" href="../pets/pets.html">Our pets</a>
 						</li>
 						<li class="list__item">
-							<a class="list__link list__link_disabled" href="javascript:void(0);">Help the shelter</a>
+							<a class="list__link list__link_disabled" href="#" id="help-link">Help the shelter</a>
 						</li>
 						<li class="list__item">
-							<a class="list__link list__link_disabled" href="javascript:void(0);">Contacts</a>
+							<a class="list__link list__link_disabled" href="#" id="contacts-link">Contacts</a>
 						</li>
 					</ul>
 				</nav>	
