feat: add part1 of task

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -8,10 +8,12 @@
   <title>Momentum</title>
 </head>
 <body>
+  <time id="day">Friday, 25 February</time>
   <time id="time"></time>
   <h1>
     <span id="greeting"></span>
     <span id="name" contenteditable="true" spellcheck="false"></span>
+    <!-- <input id="name" contenteditable="true" spellcheck="false"> -->
   </h1>
 
   <h2>What is Your Focus Today?</h2>
