feat: add part two of task

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -8,6 +8,7 @@
   <title>Momentum</title>
 </head>
 <body>
+  <button class="btn"></button>
   <time id="day">Friday, 25 February</time>
   <time id="time"></time>
   <h1>
