--- a/shelter/pages/main/main.html
+++ b/shelter/pages/main/main.html
@@ -31,10 +31,10 @@
 							<a class="list__link list__link_disabled" href="../pets/pets.html">Our pets</a>
 						</li>
 						<li class="list__item">
-							<a class="list__link list__link_disabled" href="#" id="help-link">Help the shelter</a>
+							<a class="list__link list__link_disabled-always" href="#" id="help-link">Help the shelter</a>
 						</li>
 						<li class="list__item">
-							<a class="list__link list__link_disabled" href="#" id="contacts-link">Contacts</a>
+							<a class="list__link list__link_disabled-always"  href="#" id="contacts-link">Contacts</a>
 						</li>
 					</ul>
 				</nav>	
@@ -194,11 +194,12 @@
 					</div>
 					<div class="location">
 						<h3 class="location__title">We are waiting for your visit</h3>
-						<a href="https://www.google.com/maps/place/%D0%91%D0%BE%D1%81%D1%82%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@52.9784292,-0.056431,13z/data=!3m1!4b1!4m5!3m4!1s0x47d7c2c53856f733:0x8406d541f1a0910c!8m2!3d52.97894!4d-0.026577?hl=ru-RU" class="location__address1">
+						<a href="https://www.google.com/maps/place/1+Central+St,+Boston,+MA+02109,+%D0%A1%D0%A8%D0%90/@42.3585558,-71.056915,17z/data=!3m1!4b1!4m5!3m4!1s0x89e370868bc2ce7b:0x82fa7db94f5fea9e!8m2!3d42.3585519!4d-71.0547263?hl=ru-RU" class="location__address1" target="_blank"
+						>
 							<img src="../../assets/icons/pin-22x32.svg" alt="pin" width="22" height="32">
 							<div class="location__address-text">1 Central Street, Boston (entrance from the store)</div>
 						</a>
-						<a href="https://www.google.com/maps/place/South+Park+Court,+18+S+Park+Rd,+London+SW19+8TD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.4202155,-0.2023441,17z/data=!3m1!4b1!4m5!3m4!1s0x487608baa7401b31:0x873a95ca58e122b2!8m2!3d51.4202122!4d-0.2001554?hl=ru-RU" class="location__address2">
+						<a href="https://www.google.com/maps/place/South+Park+Court,+18+S+Park+Rd,+London+SW19+8TD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.4202155,-0.2023441,17z/data=!3m1!4b1!4m5!3m4!1s0x487608baa7401b31:0x873a95ca58e122b2!8m2!3d51.4202122!4d-0.2001554?hl=ru-RU" class="location__address2" target="_blank">
 							<img src="../../assets/icons/pin-22x32.svg" alt="pin" width="22" height="32">
 							<div class="location__address-text">18 South Park, London </div>
 						</a>
