--- a/momentum/index.html
+++ b/momentum/index.html
@@ -19,7 +19,7 @@
         <div class="weather-description"></div>
         <div class="wind-speed"></div>
         <div class="humidity"></div>
-        <div class="city" contenteditable="true">Minsk</div>
+        <div class="city" contenteditable="true"></div>
       </div>
      
       <div id="day">
