feat: add sounds to btn

--- a/virtual-keyboard/index.html
+++ b/virtual-keyboard/index.html
@@ -10,6 +10,16 @@
 </head>
 <body>
   <textarea class="use-keyboard-input" placeholder="Click here"></textarea>
+
+  <audio data-key="backspace" src="sounds/clap.wav"></audio>
+  <audio data-key="voice" src="sounds/hihat.wav"></audio>
+  <audio data-key="caps" src="sounds/kick.wav"></audio>
+  <audio data-key="shift" src="sounds/openhat.wav"></audio>
+  <audio data-key="eng" src="sounds/boom.wav"></audio>
+  <audio data-key="enter" src="sounds/ride.wav"></audio>
+  <audio data-key="arrow" src="sounds/snare.wav"></audio>
+  <audio data-key="sound" src="sounds/tom.wav"></audio>
+  <audio data-key="ru" src="sounds/tink.wav"></audio>
   <script src="script.js"></script>
 </body>
 </html>
