--- a/virtual-keyboard/index.html
+++ b/virtual-keyboard/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
   <textarea class="use-keyboard-input" placeholder="Click here"></textarea>
+  <br>
+  <br>
+  <h3>* Примечания при проверке клавиатуры</h3>
+  <ol>
+    <li>Подсветка клавиш присутствует, если раскладка физической клавиатуры совпадает с виртуальной. Регистр значения не имеет. Таким образом, символ, который подсвечивается, соответствует выведенному на экран</li>
+    <li>Чтобы подсветить символы верхнего ряда (не цифры) нужно (при выключенной кнопке Shift на виртуальной клавиатуре) <strong>зажать</strong> Shift + соответствующий символ на физ.клавиатуре</li>
+    <li>Чтобы переключить язык голосового ввода, <strong>лучше</strong> сначала отключить голосовой ввод, поменять язык, а потом заново включить</li>
+  </ol>
 
   <audio data-key="backspace" src="sounds/clap.wav"></audio>
   <audio data-key="voice" src="sounds/hihat.wav"></audio>
