feat: add design and adaptive

--- a/virtual-keyboard/index.html
+++ b/virtual-keyboard/index.html
@@ -9,9 +9,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <textarea class="use-keyboard-input" placeholder="Click here"></textarea>
+  <textarea class="use-keyboard-input" placeholder="Прежде чем тестить, прочтите примечания..."></textarea>
   <br>
   <br>
+  
   <h3>* Примечания при проверке клавиатуры</h3>
   <ol>
     <li>Подсветка клавиш присутствует, если раскладка физической клавиатуры совпадает с виртуальной. Регистр значения не имеет. Таким образом, символ, который подсвечивается, соответствует выведенному на экран</li>
