feat: add flip cards

--- a/english-for-kids/src/index.html
+++ b/english-for-kids/src/index.html
@@ -16,6 +16,7 @@
     </div>
   </header>
   <main class="main">
+    <div class="main-container"></div>
   </main> 
   <footer class="footer">
     <div class="footer__wrapper">
