feat: add play functional

--- a/english-for-kids/src/index.html
+++ b/english-for-kids/src/index.html
@@ -21,7 +21,19 @@
     </div>
   </header>
   <main class="main">
-    <div class="main-container"></div>
+    <div class="main-container">
+      <div class="end-game end-game-success end-hide">
+        <div class="success-image"></div>
+        <div class="success-description">Great!!!</div>
+        <div class="success-mistakes">You have no mistakes!!!</div>
+      </div>
+      <div class="end-game end-game-failure end-hide">
+        <div class="failure-image"></div>
+        <div class="failure-description">OOOOO!!!</div>
+        <div class="failure-mistakes"></div>
+      </div>
+    </div>
+
   </main> 
   <footer class="footer">
     <div class="footer__wrapper">
