feat: add statistics to localstorage

--- a/english-for-kids/src/index.html
+++ b/english-for-kids/src/index.html
@@ -26,8 +26,26 @@
         <div class="failure-image"><img src="./assets/images/endofgame/failure.jpg" alt="failure"></div>
         <div class="failure-mistakes"></div>
       </div>
+      <div class="stat stat-hide">
+        <div class="stat-buttons">
+          <div class="stat-repeat">Repeat difficult words</div>
+          <div class="stat-reset">Reset</div>
+        </div>
+        <table class="stat-table">
+          <tr>
+            <th>Category</th>
+            <th>Word</th>
+            <th>Translation</th>
+            <th>Trained</th>
+            <th>Correct</th>
+            <th>Incorrect</th>
+            <th>%</th>
+          </tr>
+          <tbody class ="stat-body">
+          </tbody>
+        </table>
+      </div>
     </div>
-
   </main> 
   <footer class="footer">
     <div class="footer__wrapper">
@@ -40,4 +58,5 @@
   </footer>
 </body>
 </html>
+
 
