feat: add sort and reset statistics

--- a/english-for-kids/src/index.html
+++ b/english-for-kids/src/index.html
@@ -33,13 +33,13 @@
         </div>
         <table class="stat-table">
           <tr>
-            <th>Category</th>
-            <th>Word</th>
-            <th>Translation</th>
-            <th>Trained</th>
-            <th>Correct</th>
-            <th>Incorrect</th>
-            <th>%</th>
+            <th data-cat="category">Category</th>
+            <th data-cat="word">Word</th>
+            <th data-cat="translation">Translation</th>
+            <th data-cat="train">Trained</th>
+            <th data-cat="correct">Correct</th>
+            <th data-cat="incorrect">Incorrect</th>
+            <th data-cat="percent">%</th>
           </tr>
           <tbody class ="stat-body">
           </tbody>
